--- a/src/styles/pages/register.scss
+++ b/src/styles/pages/register.scss
@@ -4,7 +4,7 @@
     }
     &_button {
         border: 3px solid #001d41;
-        box-shadow: 0 3px #0c3567;
+        box-shadow: 0 3px #002f68;
         color: #b0becd;
     }
     &_button:active {
