--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -1,5 +1,5 @@
 .footerComp {
-    background-color: var(--secondary);
+    background-color: #111;
     &_logo {
         font-weight: bold;
         color: var(--primary);
