--- a/src/styles/pages/_register.scss
+++ b/src/styles/pages/_register.scss
@@ -69,4 +69,7 @@
         border-color:  #c00606;
         box-shadow: 0 0 10px #dc4343, 0 0 20px #dc4343 inset;
     }
+    p {
+        color: #b0becd;
+    }
 }
