--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 :root {
   --background: #ededed;
   --foreground: #222;
-  --primary:#ffdede;
-  --primaryBlury: #ffdede74;
+  --primary:#dfd2d2;
+  --primaryBlury: #dfd2d274;
   --secondary:#232323;
   --boxPrimary: #2a3f5f;
   --boxSecondary: #001d41;
