--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,3 +8,26 @@
       100% 100%, 20px 100%, 0 calc(100% - 20px)
     );
 }
+
+@keyframes spin-slow {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 6s linear infinite;
+}
+
+.work_page {
+  position: absolute;
+  width: 100%;
+}
+
+.work_page::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  background: linear-gradient(to bottom right, #111827, #1f2937, #000000);
+}
