--- a/src/styles/pages/_register.scss
+++ b/src/styles/pages/_register.scss
@@ -1,5 +1,9 @@
 .register {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
     h1 {
         text-align: center;
     }
@@ -15,16 +19,16 @@
 }
 
 .register::before {
-    content: '';
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
+    content: "";
     position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
     background-image: url("/images/fractal_bg_blue.jpg");
-    box-sizing: border-box;
-    background-size: cover;
+    z-index: -1;
     background-position: center;
-    filter: blur(2px);
+    background-size: cover;
 }
 
 .registerForm{
